# inf1022-compiler

./: AUTHORS  INSTALL.md  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  flake.nix
samples/: eq.c  eq.provol  fib.c  fib.provol  is_even.c  is_even.provol  pow2.c  pow2.provol
src/: README.md  llist.c  llist.h  provolone.c  provolone_compiler.c  provolone_compiler.h  provolone_lexer.l  provolone_parser.y  provolone_program.c  provolone_program.h
